Design Bug in light theme
Background Color and Text-selection-color is same so when we select text for copy or something..

For example in white background white text became invisible..

To fix this problem i change the selection text color to red so when anyone select the text in light theme they see text in red color when they select the text..

--- a/static/themes/light.css
+++ b/static/themes/light.css
@@ -1,1 +1,6 @@
-:root {}
+:root {
+  
+  /* Text */
+--text-selection-color: var(--color-red);
+
+}
